RESOLVED FIXED237481
URL's isolatedCopy() optimization when called on a r-value reference doesn't work
https://bugs.webkit.org/show_bug.cgi?id=237481
Summary URL's isolatedCopy() optimization when called on a r-value reference doesn't ...
Chris Dumez
Reported 2022-03-04 12:02:34 PST
URL's isolatedCopy() optimization when called on a r-value reference doesn't work.
Attachments
Patch (3.63 KB, patch)
2022-03-04 12:08 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2022-03-04 12:08:17 PST
Geoffrey Garen
Comment 2 2022-03-04 12:24:30 PST
Comment on attachment 453866 [details] Patch r=me
EWS
Comment 3 2022-03-04 14:11:25 PST
Committed r290846 (248079@main): <https://commits.webkit.org/248079@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453866 [details].
Radar WebKit Bug Importer
Comment 4 2022-03-04 14:12:18 PST
Note You need to log in before you can comment on or make changes to this bug.